<resources xmlns:tools="http://schemas.android.com/tools" translatable="false" tools:ignore="ExtraTranslation">
    <string name="locationKey">EWtoa5lbyt31PwwgYndPGwGiFruCYp8B</string>
    <string name="authorize_code">DA30210BE9DFEAD5100636AB25C50E98AA5A1CFEA1CDF9D4F83FC9EAC45ED469200F3A7CB1E7B0F3F6172D579031B2C456BE01A3BA7C335154961F8B49A0CDF9BB2549F88EF10737F7F9D04BA4C32EFB191AEB55C05269FF42B1202204BC3D20E639</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="go_now">立即前往</string>
    <string name="notice">提示</string>
    <string name="care_notice">温馨提示</string>
    <string name="i_know">我知道了</string>
    <string name="wangluoyichang">网络环境异常，请检查网络并重试</string>
    <string name="network_error">连接似乎有问题，请检查网络或刷新重试</string>
    <string name="about_go_hua_description">海尔消费金融旗下官方认证的互联网个人消费贷款服务平台，随时随地解决您的资金需求。够花、够快、有温度。</string>
    <string name="about_us_weburl">https://www.haiercash.com</string>
    <string name="about_us_privacy_protocols">static/agreement/PrivacyPolicy-2022-V1.1.html?channelNo=42</string>
    <string name="info_collect_protocols">static/agreement/CollectionAndUse.html</string>
    <string name="other_share_protocols">static/agreement/CommonBill.html</string>
    <string name="wx_public">officialAccount</string>
    <string name="about_us_phone_number">400&#8211;018&#8211;7777</string>
    <string name="about_us_time">9:00-18:00</string>
    <string name="empty_message">什么也没发生～</string>
    <string name="empty_record">暂无交易记录～</string>
    <string name="edu_result_error">很遗憾，您暂不符合“够花”产品申请条件，请稍后再重新申请！</string>
    <string name="text_hint">8-20位组合字母、数字</string>
    <string name="borrowing_result">请保持手机畅通，我们可能会进行电话核实，外呼电话为0532青岛座机。</string>
    <string name="edu_result">请保持手机畅通，我们将进行电话核实，外呼电话为0532青岛座机。</string>
    <string name="edu_interrupt">您确定放弃获得够花额度的机会吗？</string>
    <string name="remindupdate">"是否升级至最新版本？"</string>
    <string name="change_system_card_time">开放，更换后于次日生效。如有疑问，请联系客服热线：400-018-7777。</string>
    <string name="bankcard_tips">银行预留手机号码是办理该银行卡时所填写的手机号。没有预留手机号或者已停用，请联系银行客服更新处理。</string>
    <string name="retreat_unconnected">因未能联系到您本人导致你的额度申请被退回，请确保手机畅通，注意接听，我们将再次与您联系</string>
    <string name="retreat_face">您的人脸影像不合格，请重新进行人脸识别</string>
    <string name="retreat_idcard">您的身份证影像不清晰，请再次上传本人清晰的身份证影像</string>
    <string name="borrow_str_hit">可借金额</string>
    <string name="borrow_idcard">为了您的账号安全，需通过上传身份证的方式确认您的身份。</string>
    <string name="borrow_face">为了您的账号安全，需通过人脸识别的方式确认您的身份。</string>
    <string name="borrow_face_idcard">为了您的账号安全，需通过上传身份证及人脸识别的方式确认您的身份。</string>
    <string name="idcard_timeout">您的身份证已过有效期，请及时更换并上传最新的身份证。</string>
    <string name="borrow_password">为了您的账号安全，请设置您的交易密码。</string>
    <string name="main_head_default_text">额度一次授信即可循环使用</string>
    <string name="text_check_mobile_rem_longTimeNotLogin">您已超过3个月未登录，为了保证您的金融账户安全\n此次登录需要进行安全验证</string>
    <string name="text_check_mobile_rem">为了保证您的金融账户安全\n当前设备需要进行安全验证，通过后下次无需验证</string>
    <string name="intro">static/gh/page/intro.html?type=intro</string>
    <string name="borrow">static/gh/page/intro.html?type=borrow</string>
    <string name="loan">static/gh/page/intro.html?type=loan</string>
    <string name="upgrade">static/gh/page/intro.html?type=upgrade</string>
    <string name="apply">static/gh/page/intro.html?type=apply</string>
    <string name="load_end">没有更多了～</string>
    <string name="permission_location">为了向您提供申额、借款服务，请您开启地理位置权限</string>
    <string name="permission_calendar">为了向您提供还款提醒服务，请您开启日历权限</string>
    <string name="permission_camera">为了向您提供身份验证、上传头像、扫码、意见反馈服务，请您开启相机权限</string>
    <string name="permission_storage">为了方便您上传头像、证件照片、读取截屏、上传反馈意见的图片，请您开启存储权限</string>
    <string name="permission_phone_statue">为了提供安全的金融服务，保证您的账户安全，请允许够花使用设备信息权限。</string>
    <string name="permission_read_contact_and_call_log">为了填写联系人信息，请您开启通讯录和通话记录权限</string>
    <string name="permission_read_contact">为了帮助您快速填写联系人电话、落实业务风险控制，请您开启通讯录权限</string>
    <string name="permission_read_call_log">为了保护账号安全、落实业务风险控制,请您开启通话记录权限</string>
    <string name="permission_read_and_write_calender">为了向您提供更好的金融服务，请您开启日历权限</string>
    <string name="input_your_info_to_validate">请提供本人真实有效信息，信息仅用于身份认证</string>
    <string name="order">订单</string>
    <string name="ticket">券包</string>
    <string name="loan_record">借还记录</string>
    <string name="tool">工具服务</string>
    <string name="my_customer_service">我的客服</string>
    <string name="quick_login_biometric_hint">开启指纹识别，登录更便捷</string>
    <string name="quick_login_gesture_hint">设置手势密码，登录更便捷</string>
    <string name="go_setting">去设置</string>
    <string name="bank">银行卡</string>
    <string name="certificate_of_settlement">结清证明</string>
    <string name="account_security">账号安全</string>
    <string name="loan_calculator">贷款计算</string>
    <string name="meg_details">查看详情</string>
    <string name="today">今天 %s</string>
    <string name="data_exception">数据异常</string>
    <string name="interest_free_des">1.免息券可用于抵减贷款正常所产生的利息(逾期后产生的相关息费不可抵扣)，此券不可转让、不可叠加使用、不找零。\n2.每笔贷款仅限使用一张免息券。\n3.联合放款业务不可使用免息券。\n4.一旦产生逾期记录，所对应贷款将无法使用免息券。\n5.免息券不可抵扣本金，如:本月应还本金10元+利息5元，您选择使用面值10元的免息券，可将5元利息全部抵减;超出部分不可抵减本金、不找零。\n6.最终解释权归海尔消费金融有限公司所有。</string>
    <string name="repayment_bottom_interest_desc">本息总金额为￥%s，使用免息券减免￥%s元利息。\n合计应还总额为￥%s；\n免息券在%s期主动还款时生效；\n提前还款与代扣，免息券均不生效。</string>
    <string name="repay_now">立即还款</string>
    <string name="forget_password">忘记密码</string>
    <string name="please_input_psw">请输入登录密码</string>
    <string name="confirm">确认</string>
    <string name="unserviceable">不足使用条件</string>
    <string name="can_not_use_overdue">逾期不可用</string>
    <string name="coupon_has_bind">此免息券已绑定哦~</string>
    <string name="disc_value">(已优惠%s元)</string>
    <string name="after_disc_value">(优惠后%s元)</string>
    <string name="history_date_tips">仅支持查询近两年内的还款记录，且起始和结束时间的跨度需小于一年，更多信息请致电</string>
    <string name="setting_title">设置</string>
    <string name="setting_safe_setting_title">账号管理</string>
    <string name="setting_safe_setting">账号与安全</string>
    <string name="setting_private">隐私管理</string>
    <string name="setting_permission">权限管理</string>
    <string name="setting_status_no">未开启</string>
    <string name="setting_status_yes">已开启</string>
    <string name="setting_msg">消息通知</string>
    <string name="setting_push">定向推送</string>
    <string name="setting_private_desc">隐私说明</string>
    <string name="setting_other">其他</string>
    <string name="setting_help">帮助中心</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_wx">微信公众号</string>
    <string name="setting_wx_desc">gouhuavip</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_version">当前版本v%s</string>
    <string name="setting_tmp">TMP</string>
    <string name="safe_setting_title">账号与安全</string>
    <string name="safe_setting_login_mobile">登录手机号</string>
    <string name="safe_setting_real_name">实名认证</string>
    <string name="safe_setting_other_bind">第三方账号绑定</string>
    <string name="safe_setting_login_type">登录方式</string>
    <string name="safe_setting_set_login_pwd">设置登录密码</string>
    <string name="safe_setting_update_login_pwd">修改登录密码</string>
    <string name="safe_setting_login_gesture">手势登录</string>
    <string name="safe_setting_login_fingerprint">指纹登录</string>
    <string name="safe_setting_login_quick_status_no">未开启</string>
    <string name="safe_setting_login_quick_status_yes">已开启</string>
    <string name="safe_setting_pay_pwd">交易密码</string>
    <string name="safe_setting_pay_pwd_set">设置交易密码</string>
    <string name="safe_setting_pay_pwd_update">修改交易密码</string>
    <string name="safe_setting_other">其他</string>
    <string name="safe_setting_account_appeal">账号申诉</string>
    <string name="safe_setting_account_appeal_desc">修改实名信息</string>
    <string name="safe_setting_cancellation">账号注销</string>
    <string name="safe_setting_hint">提示</string>
    <string name="safe_setting_account_appeal_hint">当前账号有未结清或审批中的订单，暂无法更换实名信息，如需帮助可联系客服400–018–7777</string>
    <string name="safe_setting_i_know">我知道了</string>
    <string name="safe_setting_call">联系客服</string>
    <string name="set_login_pwd_title">设置密码</string>
    <string name="set_login_pwd_verify_mobile">验证手机号</string>
    <string name="set_login_pwd_verify_mobile_detail">验证码已发送至%s</string>
    <string name="update_login_pwd_verify_pwd_detail">请输入账号“%s”的原登录密码</string>
    <string name="login">登录</string>
    <string name="get_code">获取验证码</string>
    <string name="wechat_info">此操作将会收集您的第三方账号信息，此信息仅用作后续app快捷登录，若您拒绝提供第三方账号信息，可使用验证手机号的方式登录。</string>
    <string name="person_info_title">个人信息</string>
    <string name="person_info_bank_count">已绑卡%s张</string>
    <string name="person_info_id_card">身份证影像</string>
    <string name="person_info_face_repair">人脸识别</string>
    <string name="person_info_person_detail">个人资料</string>
    <string name="person_info_update">更新</string>
    <string name="person_info_no_complete">待完善</string>
    <string name="person_info_no_complete_1">去完善</string>
    <string name="person_info_no_info">暂无</string>
    <string name="person_info_look">查看</string>
    <string name="person_info_will_expire">即将过期</string>
    <string name="person_info_has_expire">已过期</string>
    <string name="person_info_no_support_add_info">暂不支持添加个人资料</string>
    <string name="person_info_real_name">实名信息</string>
    <string name="person_info_real_name_name">%s，您已完成实名</string>
    <string name="person_info_real_name_safe">您的个人信息已受到严格保护</string>
    <string name="person_info_real_name_id_card_tip">为了不影响您正常借款，需尽快更新最新的身份证</string>
    <string name="person_info_real_name_id_card_desc">仅用于核实身份</string>
    <string name="person_info_real_name_face_desc">仅用于核实身份</string>
    <string name="person_info_real_name_detail_desc">仅用于核实个人身份和信用信息</string>
    <string name="common_sms_tips">验证码已发送至：%s</string>
    <string name="common_sms_inter_tips">请输入【%s】发送的验证码</string>
    <string name="private_desc_private_protocol">海尔消费金融隐私政策</string>
    <string name="private_desc_other_share_list">第三方共享信息清单</string>
    <string name="private_desc_info_collect_list">个人信息收集清单</string>
    <string name="push_manager_title">定向推送管理</string>
    <string name="push_manager_desc">为您提供更契合您需求的产品或服务，提升使用体验</string>
    <string name="push_manager">定向推送</string>
    <string name="push_manager_dialog_tip">关闭定向推送，您可能无法获取最新的活动信息，影响您的使用体验，确定要关闭吗？</string>
    <string name="push_manager_close">确定关闭</string>
    <string name="push_manager_no_close">暂不关闭</string>
    <string name="msg_manager_title">消息通知管理</string>
    <string name="msg_manager_desc">通过站内信及消息栏通知，为您提供账户变动、优惠活动等消息的通知和提醒，提供优质体验</string>
    <string name="msg_manager">消息通知</string>
    <string name="msg_manager_dialog_tip">若关闭消息通知，您将无法收到站内信以及消息栏通知，可能导致您错过借款资金变动、优惠活动等重要消息通知，请谨慎使用</string>
    <string name="msg_manager_to_set">去设置</string>
    <string name="msg_manager_no_close">暂不关闭</string>
    <string name="appeal_real_name">实名认证</string>
    <string name="appeal_bank_card">银行卡验证</string>
    <string name="appeal_real_name_title">请输入您本人的实名信息</string>
    <string name="appeal_real_name_name">姓名</string>
    <string name="appeal_real_name_name_hint">请输入本人真实姓名</string>
    <string name="appeal_real_name_cert">身份证号</string>
    <string name="appeal_real_name_cert_hint">请输入本人身份证号码</string>
    <string name="appeal_real_name_error_name">您输入的姓名格式有误</string>
    <string name="appeal_real_name_error_cert">您输入的身份证号格式有误</string>
    <string name="appeal_next">下一步</string>
    <string name="appeal_result_complete">完成</string>
    <string name="appeal_result_success">申诉成功</string>
    <string name="appeal_result_to_login">前往登录</string>
    <string name="discharge_success_desc_1">申请提交成功</string>
    <string name="discharge_success_desc_2">预计1小时内发送到您的邮箱</string>
    <string name="discharge_success_1">结清证明预计1小时内发送至您的邮箱:</string>
    <string name="discharge_success_2">%s，请注意查收~</string>
    <string name="discharge_success_3">若未收到可咨询客服热线 400-018-7777</string>
    <string name="discharge_result_back">返回</string>
</resources>