<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    tools:viewBindingIgnore="true">

    <com.app.haiercash.base.bui.TitleBarView
        android:id="@+id/bar_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp05"
        android:background="@color/divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_header" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_apply_success"
        android:layout_width="0dp"
        android:layout_height="367dp"
        android:layout_marginLeft="@dimen/common15dp"
        android:layout_marginTop="@dimen/common55dp"
        android:layout_marginRight="@dimen/common15dp"
        android:background="@drawable/bg_apply_submit_success_white"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divder">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_success_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common30dp"
            android:text="@string/discharge_success_desc_1"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp18"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_success_email_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common5dp"
            android:text="@string/discharge_success_desc_2"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp18"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_success_des" />

        <View
            android:id="@+id/dash_line"
            android:layout_width="0dp"
            android:layout_height="1.5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="@dimen/common20dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/shape_dash_line"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_success_email_des" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_success_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common45dp"
            android:text="@string/discharge_success_1"
            android:textColor="@color/text_gray_dark"
            android:textSize="@dimen/sp14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dash_line" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_success_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common5dp"
            android:text="@string/discharge_success_2"
            android:textColor="@color/text_gray_dark"
            android:textSize="@dimen/sp14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_success_1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_success_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common5dp"
            android:text="@string/discharge_success_3"
            android:textColor="@color/text_gray_dark"
            android:textSize="@dimen/sp14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_success_2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_confirm_success"
            android:layout_width="0dp"
            android:layout_height="@dimen/common48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="@dimen/common45dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/selector_big_btn"
            android:gravity="center"
            android:text="@string/discharge_result_back"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_success_3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_success_or_fail"
        android:layout_width="@dimen/common50dp"
        android:layout_height="@dimen/common50dp"
        android:layout_marginTop="@dimen/common31dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divder"
        app:srcCompat="@drawable/img_apply_submit_success" />
</androidx.constraintlayout.widget.ConstraintLayout>
